--- a/deliberti-purchase/src/main/resources/conf.properties
+++ b/deliberti-purchase/src/main/resources/conf.properties
@@ -1,7 +1,7 @@
 supplierId=2016030901801
 supplierNo=S0000727
-#url=www.gicos.it/get.php
-url=www.gicos.it/gettest.php
+#url=http://www.gicos.it/get.php
+url=http://www.gicos.it/gettest.php
 jobsSchedule=0 0/2 * * * ?
 startDateOfTemp=
 endDateOfTemp=
