atelierPaolo stock up

--- a/atelier-paolo-stock/build.gradle
+++ b/atelier-paolo-stock/build.gradle
@@ -21,10 +21,7 @@ jar {
 
     manifest {
 	
-   		 attributes 'Main-Class': 'com.shangpin.iog.atelier-paolo.stock.StockImp'
-    
-   
-   
+   		 attributes 'Main-Class': 'com.shangpin.iog.paolo.stock.schedule.Startup'
    //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
