up tiziana stock

--- a/tiziana-stock/src/main/resources/conf.properties
+++ b/tiziana-stock/src/main/resources/conf.properties
@@ -1,3 +1,5 @@
 supplierId=2016031801812
 url=http://tizianaws.atelier98.net/ws_sito/ws_sito_p15.asmx/
 day=90
+jobsSchedule=0 22 0/1 * * ? 
+time=5400000
