--- a/tiziana-stock/build.gradle
+++ b/tiziana-stock/build.gradle
@@ -5,8 +5,6 @@ dependencies {
     compile(
     		project(':iog-common-product'),
         project(':openapi-ice'),
-        
- 
     )
 }
 
@@ -21,10 +19,7 @@ jar {
 
     manifest {
 	
-   		 attributes 'Main-Class': 'com.shangpin.iog.tiziana.stock.StockImp'
+   		 attributes 'Main-Class': 'com.shangpin.iog.tiziana.stock.schedule.Startup'
     
-   
-   
-   //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
