--- a/piccadilly-stock/build.gradle
+++ b/piccadilly-stock/build.gradle
@@ -21,7 +21,7 @@ jar {
 
     manifest {
 	
-   		 attributes 'Main-Class': 'com.shangpin.iog.piccadilly.stock.StockImp'
+   		 attributes 'Main-Class': 'com.shangpin.iog.piccadilly.stock.schedule.Startup'
     
    
    
