--- a/russoCapri-stock/build.gradle
+++ b/russoCapri-stock/build.gradle
@@ -23,7 +23,7 @@ jar {
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.russoCapri.stock.RussoCapriStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.russoCapri.stock.schedule.Startup'
 
       //  attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
