--- a/linoricci-stock/build.gradle
+++ b/linoricci-stock/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
 //    def manifestCp = configurations.compile.files.collect  {
