--- a/wokstore-stock/build.gradle
+++ b/wokstore-stock/build.gradle
@@ -1,8 +1,4 @@
 
-
-
-
-
 dependencies {
     compile(
             "com.google.code.gson:gson:2.3.1",
@@ -11,23 +7,21 @@ dependencies {
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
-
 }
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+    //def manifestCp = configurations.compile.files.collect  {
+    //    File file = it
+    //    "lib/${file.name}"
+    //}.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.wokstore.stock.StockImp'
-        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.wokstore.stock.schedule.Startup'
+    //    attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
