--- a/inviqa-stock/src/main/resources/conf.properties
+++ b/inviqa-stock/src/main/resources/conf.properties
@@ -1,1 +1,14 @@
-supplierId=2016010601584
+jobsSchedule=30 1 0/1 * * ? 
+time=5400000
+
+supplierId=2016012801758
+token=q5gj1n97vkjwspptteb5nonjidte2j7c
+secret=virjysp6wpnwqgio1k2ohbsvds09ti2o
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=zhaogenchun@shangpin.com
+subject=efashion\u8BA2\u5355\u5F02\u5E38
+messageText=
+messageType=text/html;charset=utf-8
