--- a/inviqa-stock/build.gradle
+++ b/inviqa-stock/build.gradle
@@ -14,14 +14,9 @@ jar {
 
     dependsOn copyToLib,copyResources, copyResourcesToClasses
     exclude ("**/*.properties")
-    def manifestCp = configurations.compile.files.collect {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.inviqa.stock.StockImp'
-        attributes 'Class-Path': '. ./conf/  ' + manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.inviqa.stock.schedule.Startup'
     }
 }
 
