--- a/inviqa/src/main/resources/conf.properties
+++ b/inviqa/src/main/resources/conf.properties
@@ -1,4 +1,6 @@
-supplierId=2016010601584
-MAGENTO_API_KEY=anr63gksisphqnkcd671nh88egnfqtu3
-MAGENTO_API_SECRET=vhpk60p6srj4qtgbyq7wc3wxe7ybyzv4
-MAGENTO_REST_API_URL=https://glamorous-uat.phplab.co.uk/api/rest
+supplierId=2016012801758
+MAGENTO_API_KEY=4myf74kunqjzxilv5rcp4a10mt80jza9
+MAGENTO_API_SECRET=39c7316hejadp5p7zkc4lku1dw8231g3
+MAGENTO_REST_API_URL=http://glamorous-staging.space48.com/api/rest
+token=q5gj1n97vkjwspptteb5nonjidte2j7c
+secret=virjysp6wpnwqgio1k2ohbsvds09ti2o
