--- a/efashion-order/build.gradle
+++ b/efashion-order/build.gradle
@@ -16,16 +16,11 @@ dependencies {
 
 }
 jar {
-    dependsOn copyToLib, copyResources
+    dependsOn copyToLib, copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.efashion.Startup'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
