--- a/efashion/build.gradle
+++ b/efashion/build.gradle
@@ -25,18 +25,11 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
-
-
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.efashion.StartSkuJob'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
 }
