--- a/inviqa-stock/build.gradle
+++ b/inviqa-stock/build.gradle
@@ -13,10 +13,16 @@ dependencies {
 jar {
 
     dependsOn copyToLib,copyResources, copyResourcesToClasses
-    exclude ("**/*.properties")
+   exclude ("**/*.properties")
+    def manifestCp = configurations.compile.files.collect {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.inviqa.stock.schedule.Startup'
+          attributes 'Class-Path': '. ./conf/  ' + manifestCp
+        
     }
 }
 
