--- a/pavinGroup-stock/bin/conf.properties
+++ b/pavinGroup-stock/bin/conf.properties
@@ -1,2 +1,5 @@
 supplierId=2015093001569
 uri=http://www.pavingroup.com/it/rss
+jobsSchedule=0 0/3 * * * ?
+#jobsSchedule=30 1 0/1 * * ? 
+time=5400000
