--- a/pavinGroup-stock/build.gradle
+++ b/pavinGroup-stock/build.gradle
@@ -1,6 +1,7 @@
 
 dependencies {
     compile(
+     "org.jsoup:jsoup:1.8.3",
             "org.mybatis:mybatis:3.2.2",
             "org.mybatis:mybatis-spring:1.2.0",
             "mysql:mysql-connector-java:5.1.21",
@@ -8,7 +9,8 @@ dependencies {
             project(':project-common'),
             project(':project-dao'),
             project(':iog-common-product'),
-             "com.google.code.gson:gson:2.3.1"
+             "com.google.code.gson:gson:2.3.1",
+                    project(':openapi-ice')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -18,16 +20,10 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib,copyResources, copyResourcesToClasses
+    dependsOn copyToLib,copyResources, dependsClassPath
     exclude ("**/*.properties")
-    def manifestCp = configurations.compile.files.collect {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
-
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.pavinGroup.stock.StockImp'
-        attributes 'Class-Path': '. ./conf/  ' + manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.pavinGroup.stock.schedule.Startup'
     }
 }
 
