--- a/pavinGroup/build.gradle
+++ b/pavinGroup/build.gradle
@@ -19,16 +19,11 @@ dependencies {
 
 
 jar {
-    dependsOn copyToLib, copyResources
+    dependsOn copyToLib, copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.pavinGroup.StartSkuJob'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
