--- a/reebonzWiki-stock/bin/conf.properties
+++ b/reebonzWiki-stock/bin/conf.properties
@@ -1,5 +1,7 @@
 stockUrl=http://api.reebonz.com/gate/api/shangpin/product_qty
 supplierId=2015101001584
-
+jobsSchedule=0 0/3 * * * ?
+#jobsSchedule=30 1 0/1 * * ? 
+time=5400000
 #supplierId=2015092800199
 #stockUrl=http://hps.sit.titan.reebonz-dev.com/api/shangpin/product_qty
