--- a/reebonzWiki-stock/build.gradle
+++ b/reebonzWiki-stock/build.gradle
@@ -11,16 +11,11 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib,copyResources, copyResourcesToClasses
+    dependsOn copyToLib,copyResources, dependsClassPath
     exclude ("**/*.properties")
-    def manifestCp = configurations.compile.files.collect {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.reebonz.stock.StockImp'
-        attributes 'Class-Path': '. ./conf/  ' + manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.reebonz.stock.schedule.Startup'
     }
 }
 
