--- a/vrients-stock/src/main/resources/conf.properties
+++ b/vrients-stock/src/main/resources/conf.properties
@@ -2,3 +2,6 @@ path=/usr/local/appstock/vrients/shangping2.csv
 #path=E:/amfeed/shangping_stock.csv
 url=http://www.vrients.com/index.php/admin/amfeed/main/download/file/shangping.csv/
 supplierId=2015111601665
+
+jobsSchedule=0 36 0/1 * * ? 
+time=5400000
