--- a/atelier-ostore-stock/build.gradle
+++ b/atelier-ostore-stock/build.gradle
@@ -1,13 +1,7 @@
-
-
-
-
-def propertyPath =    "$buildDir/libs/conf"
-
 dependencies {
     compile(
-	 project(':openapi-ice'),
-      project(':iog-common-product'),
+		project(':iog-sop'),
+		project(':iog-common-product'),
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -16,7 +10,7 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
 //    def manifestCp = configurations.compile.files.collect  {
