--- a/woolrich-stock/src/main/resources/sop.properties
+++ b/woolrich-stock/src/main/resources/sop.properties
@@ -8,3 +8,5 @@ APP_KEY=d563d4b9756f4b63870caaffd61c506b
 APP_SECRET =2e7ea3bca8024a1b9200503afd05d65f
 
 supplierId=2015121801705
+jobsSchedule=0 15 0/1 * * ? 
+time=5400000
