--- a/divo-stock/src/main/resources/sop.properties
+++ b/divo-stock/src/main/resources/sop.properties
@@ -4,7 +4,7 @@ APP_KEY=31c1ae971a484ceab29d13b1e98b1e39
 APP_SECRET =d79d948d65cf43398486cb1882bc2b94
 supplierId=2016022401783
 url=http://185.5.180.90/ws_sito/ws_sito_p15.asmx/
-
-
+jobsSchedule=0 10 0/1 * * ? 
+time=5400000
 
 
