--- a/Creative99-stock/build.gradle
+++ b/Creative99-stock/build.gradle
@@ -21,8 +21,7 @@ jar {
 
     manifest {
 	
-   		 attributes 'Main-Class': 'com.shangpin.iog.Creative99.stock.StockImp'
-    
+		 attributes 'Main-Class': 'com.shangpin.iog.Creative99.stock.schedule.Startup'
    
    
    //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
