--- a/atelier-ostore-stock/build.gradle
+++ b/atelier-ostore-stock/build.gradle
@@ -22,8 +22,7 @@ jar {
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.ostore.stock.OstoreStockImp'
-
+        attributes 'Main-Class': 'com.shangpin.iog.ostore.stock.schedule.Startup'
 //        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
