--- a/divo-stock/build.gradle
+++ b/divo-stock/build.gradle
@@ -24,8 +24,8 @@ jar {
 
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.divo.stock.DivoStockImp'
-
+//        attributes 'Main-Class': 'com.shangpin.iog.divo.stock.DivoStockImp'
+		attributes 'Main-Class': 'com.shangpin.iog.divo.stock.schedule.Startup'
 //        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
