--- a/ctsiLogistics-stock/src/main/resources/conf.properties
+++ b/ctsiLogistics-stock/src/main/resources/conf.properties
@@ -1,9 +1,9 @@
 supplierId=2016022501784
-#localPath=F://
+localPath=F://
 productPath=/Output/
 picturePath=/Photo/
 day=90
-localPath=/usr/local/appstock/ctsiLogistics/
+#localPath=/usr/local/appstock/ctsiLogistics/
 #jobsSchedule=0 0/2 * * * ? 
 jobsSchedule=0 2 0/1 * * ? 
 time=5400000
