--- a/efashion-order/src/main/resources/conf.properties
+++ b/efashion-order/src/main/resources/conf.properties
@@ -3,3 +3,11 @@ supplierNo=S0000593
 url=http://api.gebnegozi.com/api/v2/place/order.json?storeCode=DW3LT
 startDateOfTemp=
 endDateOfTemp=
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=zhaogenchun@shangpin.com
+subject=reebonz\u8BA2\u5355\u5F02\u5E38
+messageText=
+messageType=text/html;charset=utf-8
