--- a/inviqa-stock/src/main/resources/conf.properties
+++ b/inviqa-stock/src/main/resources/conf.properties
@@ -2,8 +2,12 @@ jobsSchedule=30 1 0/1 * * ?
 time=5400000
 
 supplierId=2016012801758
-token=q5gj1n97vkjwspptteb5nonjidte2j7c
-secret=virjysp6wpnwqgio1k2ohbsvds09ti2o
+
+MAGENTO_API_KEY=drmuhfgxtg9uyfc0gd0zr9r9litnl1p6
+MAGENTO_API_SECRET=vqtk7uipwa67a9wde31k5db4k1qbeela
+MAGENTO_REST_API_URL=http://www.glamorous.com/api/rest/shangpin/
+token=sqdl7cx7hp1ti6k6w112yo5wnbzxigm0
+secret=htrrblkx5nmcbd2chm708jq1xcpxudw8
 
 smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
