--- a/inviqa/src/main/resources/conf.properties
+++ b/inviqa/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
 supplierId=2016012801758
-MAGENTO_API_KEY=4myf74kunqjzxilv5rcp4a10mt80jza9
-MAGENTO_API_SECRET=39c7316hejadp5p7zkc4lku1dw8231g3
-MAGENTO_REST_API_URL=http://glamorous-staging.space48.com/api/rest
-token=q5gj1n97vkjwspptteb5nonjidte2j7c
-secret=virjysp6wpnwqgio1k2ohbsvds09ti2o
+MAGENTO_API_KEY=drmuhfgxtg9uyfc0gd0zr9r9litnl1p6
+MAGENTO_API_SECRET=vqtk7uipwa67a9wde31k5db4k1qbeela
+MAGENTO_REST_API_URL=http://www.glamorous.com/api/rest/shangpin/
+token=sqdl7cx7hp1ti6k6w112yo5wnbzxigm0
+secret=htrrblkx5nmcbd2chm708jq1xcpxudw8
