--- a/efashion-stock/build.gradle
+++ b/efashion-stock/build.gradle
@@ -10,16 +10,10 @@ dependencies {
 
 
 jar {
-
-    dependsOn copyToLib,copyResources, copyResourcesToClasses
+ 	dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
-    def manifestCp = configurations.compile.files.collect {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.efashion.stock.schedule.Startup'
-        attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
