--- a/fusco/build.gradle
+++ b/fusco/build.gradle
@@ -2,7 +2,6 @@
 
 dependencies {
     compile(
-
             "commons-dbcp:commons-dbcp:1.4",
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
@@ -23,15 +22,8 @@ jar {
     dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
 
-
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
-
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.ctsiLogistics.StartSkuJob'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.fusco.StartSkuJob'
     }
 
 }
