--- a/inviqa-stock/build.gradle
+++ b/inviqa-stock/build.gradle
@@ -20,7 +20,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.inviqa.stock.schedule.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.inviqa.stock.StockImp'
           attributes 'Class-Path': '. ./conf/  ' + manifestCp
         
     }
