--- a/raffaelloNetwork-stock/src/main/resources/conf.properties
+++ b/raffaelloNetwork-stock/src/main/resources/conf.properties
@@ -1,2 +1,4 @@
 supplierId=2016021501765
 uri=https://www.raffaello-network.com/data-feeds/shangpin/shangpin_datafeed.txt
+jobsSchedule=0 20 0/1 * * ? 
+time=7200000
