--- a/raffaelloNetwork-stock/build.gradle
+++ b/raffaelloNetwork-stock/build.gradle
@@ -18,14 +18,14 @@ jar {
 
     dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}" 
-    }.join(' ')
+    //def manifestCp = configurations.compile.files.collect  {
+    //    File file = it
+    //    "lib/${file.name}" 
+    //}.join(' ')
 
     manifest {
 	
-   		attributes 'Main-Class': 'com.shangpin.iog.raffaelloNetwork.stock.StockImp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+   		attributes 'Main-Class': 'com.shangpin.iog.raffaelloNetwork.stock.schedule.Startup'
+    //    attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
