--- a/pozzilei-stock/build.gradle
+++ b/pozzilei-stock/build.gradle
@@ -13,18 +13,18 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+    //def manifestCp = configurations.compile.files.collect  {
+    //    File file = it
+    //    "lib/${file.name}"
+    //}.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.pozzilei.stock.PozzileiStockImp'
-        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
+    //    attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
