--- a/pozzilei/build.gradle
+++ b/pozzilei/build.gradle
@@ -20,16 +20,16 @@ dependencies {
 }
 
 jar {
- 	dependsOn copyToLib, copyResources
+ 	dependsOn copyToLib, copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+    //def manifestCp = configurations.compile.files.collect  {
+    //    File file = it
+    //    "lib/${file.name}"
+    //}.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.pozzilei.StartSkuJob'
-        attributes 'Class-Path': '. ./conf/  ' + manifestCp
+    //    attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
