--- a/wokstore/build.gradle
+++ b/wokstore/build.gradle
@@ -19,15 +19,15 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
     
-   def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+   //def manifestCp = configurations.compile.files.collect  {
+   //     File file = it
+   //     "lib/${file.name}"
+   // }.join(' ')
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.wokstore.stock.StartSkuJob'
-        attributes 'Class-Path': '. ./conf/  ' + manifestCp
+   //     attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
