--- a/prodottimonti-stock/build.gradle
+++ b/prodottimonti-stock/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
     compile(
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
-            "commons-dbcp:commons-dbcp:1.4",
+           // "org.mybatis:mybatis:3.2.2",
+           // "org.mybatis:mybatis-spring:1.2.0",
+            //"mysql:mysql-connector-java:5.1.21",
+           // "commons-dbcp:commons-dbcp:1.4",
             "com.google.code.gson:gson:2.3.1",
             project(':project-common'),
             project(':project-dao'),
@@ -15,21 +15,21 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib,copyResources, copyResourcesToClasses
+    dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
 //    }
 
-    def manifestCp = configurations.compile.files.collect {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+//    def manifestCp = configurations.compile.files.collect {
+//        File file = it
+//        "lib/${file.name}"
+//    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.prodottimonti.stock.ProdottimontiStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ./conf/  ' + manifestCp
+//        attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
