--- a/vrients-stock/build.gradle
+++ b/vrients-stock/build.gradle
@@ -2,14 +2,14 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
     compile(
-            "commons-httpclient:commons-httpclient:3.1",
-            "org.apache.httpcomponents:httpclient:4.1.1",
-            "org.projectlombok:lombok:1.14.8",
-            "commons-net:commons-net:1.4.1",
-            "org.jdom:jdom:2.0.2",
+           // "commons-httpclient:commons-httpclient:3.1",
+           // "org.apache.httpcomponents:httpclient:4.1.1",
+           // "org.projectlombok:lombok:1.14.8",
+            //"commons-net:commons-net:1.4.1",
+           // "org.jdom:jdom:2.0.2",
             "com.enterprisedt:edtFTPj:1.5.3",
-            "org.jdom:jdom:2.0.2",
-            "dom4j:dom4j:1.6.1",
+           // "org.jdom:jdom:2.0.2",
+            //"dom4j:dom4j:1.6.1",
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
             project(':openapi-ice'),
@@ -24,17 +24,17 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources, copyResourcesToClasses
+    dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+  //  def manifestCp = configurations.compile.files.collect  {
+  //      File file = it
+  //      "lib/${file.name}"
+  //  }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.amfeed.stock.StartJob'
 
-        attributes 'Class-Path': '.  ./conf/ ' +  manifestCp
+      //  attributes 'Class-Path': '.  ./conf/ ' +  manifestCp
     }
 }
