--- a/spinnaker/build.gradle
+++ b/spinnaker/build.gradle
@@ -11,6 +11,7 @@ dependencies {
             "com.google.code.gson:gson:2.3.1",
             project(':project-common'),
             project(':iog-common-product'),
+            project(':iog-product-framework'),
             project(':project-dao')
     )
 
