--- a/leam-stock/build.gradle
+++ b/leam-stock/build.gradle
@@ -1,6 +1,3 @@
-
-
-
 dependencies {
     compile(
             "com.google.code.gson:gson:2.2.2",
@@ -10,27 +7,21 @@ dependencies {
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
-
 }
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+    //def manifestCp = configurations.compile.files.collect  {
+    //    File file = it
+    //    "lib/${file.name}"
+    //}.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.leam.stock.StockClientImp'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        //attributes 'Main-Class': 'com.shangpin.iog.leam.stock.StockClientImp'
+        attributes 'Main-Class': 'com.shangpin.iog.leam.stock.schedule.Startup'
+        //attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
-
-
-
-
