--- a/leam-stock/src/main/resources/conf.properties
+++ b/leam-stock/src/main/resources/conf.properties
@@ -2,3 +2,6 @@
 supplierId=2015081701441
 token=http://172.20.30.215/modules/api/v2/getToken/
 skuUrl=http://188.165.92.169/modules/api/v2/stock/
+
+jobsSchedule=0 18 0/1 * * ? 
+time=5400000
