--- a/leam-stock/src/main/resources/log4j.properties
+++ b/leam-stock/src/main/resources/log4j.properties
@@ -5,7 +5,6 @@ log4j.appender.spring.layout=org.apache.log4j.PatternLayout
 log4j.appender.spring.layout.ConversionPattern=%d %p [%c] - %m%n
 
 #通用日志配置
-log4j.rootCategory=ERROR, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.Encoding=UTF-8
 log4j.appender.file.File=log/leam-stock-logs.log
@@ -44,7 +43,7 @@ log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
 #log4j.appender.error.MaxBackupIndex=2
 log4j.appender.error.layout=org.apache.log4j.PatternLayout
-log4j.appender.error.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
+log4j.appender.error.layout.ConversionPattern=%m%n
 #自定义日志不输入到log4j.rootLogger模式
 log4j.additivity.error=false
 
