--- a/openapi-ice/src/main/resources/redis.properties
+++ b/openapi-ice/src/main/resources/redis.properties
@@ -9,9 +9,9 @@ redis.pool.testOnBorrow=true
 #当调用return Object方法时，是否进行有效性检查
 redis.pool.testOnReturn=true
 #地址
-#redis.url=@db.redis.url@
-#redis.port=@db.redis.port@
-#redis.password=@db.redis.password@
-redis.url=172.20.10.127
-redis.port=6379
-redis.password=
+redis.url=@db.redis.url@
+redis.port=@db.redis.port@
+redis.password=@db.redis.password@
+#redis.url=172.20.10.127
+#redis.port=6379
+#redis.password=
