--- a/pozzilei-stock/build.gradle
+++ b/pozzilei-stock/build.gradle
@@ -1,5 +1,4 @@
 
-
 dependencies {
     compile(
             "com.google.code.gson:gson:2.3.1",
@@ -7,7 +6,6 @@ dependencies {
             project(':openapi-ice')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
-
 
 }
 
@@ -20,11 +18,12 @@ jar {
     //def manifestCp = configurations.compile.files.collect  {
     //    File file = it
     //    "lib/${file.name}"
-    //}.join(' ')
+    //    }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.pozzilei.stock.PozzileiStockImp'
-    //    attributes 'Class-Path': '. ./conf/ ' +  manifestCp
+    //    attributes 'Main-Class': 'com.shangpin.iog.pozzilei.stock.PozzileiStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.pozzilei.stock.schedule.Startup'
+   	//	attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
