--- a/cirillomoda-stock/build.gradle
+++ b/cirillomoda-stock/build.gradle
@@ -9,18 +9,11 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
-
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.cirillomoda.stock.GrabStockImp'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.cirillomoda.stock.schedule.Startup'
     }
 }
 
