--- a/dellogliostore-stock/build.gradle
+++ b/dellogliostore-stock/build.gradle
@@ -4,20 +4,20 @@ dependencies {
             project(':project-common'),
             project(':openapi-ice')
     )
-    compile project(':dellogliostore')
+    //compile project(':dellogliostore')
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
 jar {
-    dependsOn copyToLib,copyResources, copyResourcesToClasses
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
-    def manifestCp = configurations.compile.files.collect {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+  //  def manifestCp = configurations.compile.files.collect {
+  //      File file = it
+  //      "lib/${file.name}"
+  //  }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.dellogliostore.stock.GrabStockImp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+    //    attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
