--- a/spinnaker-stock/build.gradle
+++ b/spinnaker-stock/build.gradle
@@ -9,17 +9,17 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib , copyResources,dependsClassPath
+    dependsOn copyToLib , copyResources
     exclude ("**/*.properties")
 
-    //def manifestCp = configurations.compile.files.collect  {
-    //    File file = it
-    //    "lib/${file.name}"
-    //}.join(' ')
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.spinnaker.stock.schedule.Startup'
-//        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
+       attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
