--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -7,8 +7,8 @@ smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
 fromUserPassword=shangpin001
 #
-to=joyce.xia@shangpin.com
-subject=\u4EF7\u683C\u53D1\u751F\u53D8\u5316\u7684\u4EA7\u54C1\u5217\u8868
+to=joyce.xia@shangpin.com,lizhongren@shangpin.com,lubaijiang@shangpin.com,amanda.lee@shangpin.com,wangsaying@shangpin.com,maggie.zhang@shangpin.com,liufang@shangpin.com,eleonora.sun@shangpin.com,sunxiaowen@shangpin.com
+subject=\=\=\=\=\=\=\u8BF7\u6CE8\u610F\uFF0C\u9644\u4EF6\u4E2D\u7684\u4EA7\u54C1\u4EF7\u683C\u53D1\u751F\u4E86\u53D8\u5316\=\=\=\=\=\=\=\=\=\=
 messageType=text/html;charset\=utf-8
 
 host=172.20.10.127
