--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -29,3 +29,6 @@ goodproduct_FilePath=/usr/local/tomcat7/webapps/newFechproducts.csv
 goodproduct_To=yudandan@shangpin.com
 goodproduct_Subject=\u4ECA\u65E5\u62C9\u53D6\u7684\u65B0\u54C1
 
+
+deleteSupplier=iog_1234566
+
