--- a/coltorti/build.gradle
+++ b/coltorti/build.gradle
@@ -24,8 +24,8 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.ColtortiStartup'
+        attributes 'Main-Class': 'com.shangpin.iog.coltorti.stock.schedule.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ./conf/ '+ manifestCp
+     //  attributes 'Class-Path': '. ./conf/ '+ manifestCp
     }
 }
