--- a/coltorti/src/main/resources/conf.properties
+++ b/coltorti/src/main/resources/conf.properties
@@ -3,3 +3,6 @@ supplierId=2015081701440
 #productSupplierId=2015061901300
 productSupplierId=2015081701440
 day=90
+
+jobsSchedule=0 4 0/1 * * ? 
+time=5400000
