--- a/cosentinoShop-stock/src/main/resources/conf.properties
+++ b/cosentinoShop-stock/src/main/resources/conf.properties
@@ -1,4 +1,5 @@
 
 supplierId=2015121101695
-
+jobsSchedule=0 50 0/1 * * ? 
+time=5400000
 pullUrl=http://cosentinoshop.com/feeds/Shangpin_Tutti_EN.xml?empty_cache=
