--- a/monnierfreres-stock/src/main/resources/param.properties
+++ b/monnierfreres-stock/src/main/resources/param.properties
@@ -1,4 +1,4 @@
 path=/usr/local/app/monnierfreres/monnierfreres
-url=http://prod.monnierfreres.com/media/lengow/default/lengow_feed.csv
+url=http://www.monnierfreres.eu/media/lengow/eu_en/lengow_feed.csv
 supplierId=2015101001587
   #201509281616
