--- a/iog-web-container/build.gradle
+++ b/iog-web-container/build.gradle
@@ -23,7 +23,8 @@ dependencies {
             "commons-fileupload:commons-fileupload:1.3.1",
             "commons-io:commons-io:1.4",
             "taglibs:standard:1.1.2",
-            "javax.servlet:jstl:1.1.2"
+            "javax.servlet:jstl:1.1.2",
+            "net.lingala.zip4j:zip4j:1.3.2",
 
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
