--- a/opticalscribe/build.gradle
+++ b/opticalscribe/build.gradle
@@ -13,17 +13,13 @@ dependencies {
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
-
 }
-
-
 
 jar {
     dependsOn copyToLib, copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.pavinGroup.StartSkuJob'
+        attributes 'Main-Class': 'com.shangpin.iog.opticalscribe.StartSkuJob'
     }
 }
