--- a/rossana-stock/src/main/resources/conf.properties
+++ b/rossana-stock/src/main/resources/conf.properties
@@ -1,6 +1,7 @@
 
 supplierId=2015121501699
-filepath=http://feeds.gasmy.it/Shangping_CE_EN.csv
+#filepath=http://feeds.gasmy.it/Shangping_CE_EN.csv
+filepath=http://www.gasmy.it/feeds/Shangping_CE_EN.csv
 local=
 jobsSchedule=0 30 0/1 * * ?
 time=3600000
