--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -30,5 +30,6 @@ goodproduct_To=yudandan@shangpin.com
 goodproduct_Subject=\u4ECA\u65E5\u62C9\u53D6\u7684\u65B0\u54C1
 
 
-deleteSupplier=iog_1234566
+deleteSupplier=iog_1234566,iog_12345667
+
 
