--- a/coltorti/build.gradle
+++ b/coltorti/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'java'
 dependencies{
-	compile(
-		"com.google.code.gson:gson:2.3.1",
-		project(":iog-service"),
-		project(":iog-common-product"),
-		project(":project-common"),
-		project(":project-dao"),
-		project(":project-framework"),
-		project(":openapi-ice"),
-		)
+    compile(
+            "com.google.code.gson:gson:2.3.1",
+            project(":iog-service"),
+            project(":iog-common-product"),
+            project(":project-common"),
+            project(":project-dao"),
+            project(":project-framework"),
+            project(":openapi-ice"),
+    )
 }
 
 
@@ -24,8 +24,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.coltorti.stock.schedule.Startup'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-     //  attributes 'Class-Path': '. ./conf/ '+ manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.ColtortiStartup'
+        attributes 'Class-Path': '. ./conf/ '+ manifestCp
     }
 }
