--- a/giglio-stock/build.gradle
+++ b/giglio-stock/build.gradle
@@ -9,18 +9,18 @@ dependencies {
 }
 
 jar {
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+    //def manifestCp = configurations.compile.files.collect  {
+    //   File file = it
+    //    "lib/${file.name}"
+    //}.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.giglio.stock.GrabStockImp'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        //attributes 'Main-Class': 'com.shangpin.iog.giglio.stock.GrabStockImp'
+		attributes 'Main-Class': 'com.shangpin.iog.giglio.stock.schedule.Startup'
+        //attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
