--- a/gilt-purchase/src/main/resources/conf.properties
+++ b/gilt-purchase/src/main/resources/conf.properties
@@ -1,5 +1,6 @@
 #
-supplierId=2015090900158
+#supplierId=2015090900158
+supplierId=2015081401432
 key = fb8ea6839b486dba8c5cabb374c03d9d
 url=https://api-sandbox.gilt.com
 #https://api.gilt.com
