--- a/theclutcher/src/main/resources/conf.properties
+++ b/theclutcher/src/main/resources/conf.properties
@@ -1,3 +1,6 @@
 supplierId=2015101017999
 local.filePath=E\:\\lubaijiang
 day=90
+
+uri=https://www.theclutcher.com/en-US/home/feedShangpin
+picpath=/mnt/nfs/theclutcher/
