--- a/theclutcher/build.gradle
+++ b/theclutcher/build.gradle
@@ -5,7 +5,8 @@ dependencies {
             "org.jdom:jdom:2.0.2",
             project(':project-common'),
          
-            project(':iog-common-product')
+            project(':iog-common-product'),
+            project(':iog-product-framework')
     )
     compile 'com.stanfy:gson-xml-java:0.1.+'
     compile 'com.google.code.gson:gson:2.3.1'
