--- a/prodottimonti-stock/src/main/resources/conf.properties
+++ b/prodottimonti-stock/src/main/resources/conf.properties
@@ -3,3 +3,13 @@ supplierId=2015092201519
 
 jobsSchedule=0 39 0/1 * * ? 
 time=3600000
+
+
+#服务地址
+HOST=http://open.shangpin.com:8080
+#supplier key
+APP_KEY=37fb2b7d7ad6471f8b826ccb27bdb614
+#supplier secret
+APP_SECRET =12587e454c414943ba76949fdb022a64
+
+
