--- a/prodottimonti-stock/build.gradle
+++ b/prodottimonti-stock/build.gradle
@@ -8,7 +8,7 @@ dependencies {
             project(':project-common'),
             project(':project-dao'),
             project(':iog-common-product'),
-            project(':openapi-ice')
+            project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
