--- a/Monti/build.gradle
+++ b/Monti/build.gradle
@@ -1,17 +1,18 @@
 
 dependencies {
     compile (
-            "commons-httpclient:commons-httpclient:3.1",
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
-            "commons-dbcp:commons-dbcp:1.4",
-            "org.springframework:spring-jdbc:${springVersion}",
-            "com.github.pagehelper:pagehelper:3.7.3",
+            //"commons-httpclient:commons-httpclient:3.1",
+            //"org.mybatis:mybatis:3.2.2",
+            //"org.mybatis:mybatis-spring:1.2.0",
+            //"mysql:mysql-connector-java:5.1.21",
+           // "commons-dbcp:commons-dbcp:1.4",
+            //"org.springframework:spring-jdbc:${springVersion}",
+            //"com.github.pagehelper:pagehelper:3.7.3",
             "com.google.code.gson:gson:2.3.1",
-            project(':project-common'),
+            //project(':project-common'),
             project(':iog-common-product'),
-            project(':project-dao')
+            //project(':project-dao'),
+            project(':iog-product-framework')
     )
 
 
@@ -21,16 +22,16 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib, copyResources
+    dependsOn copyToLib, copyResources,dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+    //def manifestCp = configurations.compile.files.collect  {
+    //    File file = it
+     //   "lib/${file.name}"
+    //}.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.monti.StartUp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        //attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
