--- a/dellogliostore-stock/src/main/resources/conf.properties
+++ b/dellogliostore-stock/src/main/resources/conf.properties
@@ -4,3 +4,10 @@ jobsSchedule=0 0 0/1 * * ?
 time=3600000
 #test
 #supplierId=2015092301114
+
+#服务地址
+HOST=http://open.shangpin.com:8080
+#supplier key
+APP_KEY=6dfc375e89774a269bbfb7ba27779099
+#supplier secret
+APP_SECRET =989acd1069e24dc5bac69146e4599356
