--- a/dante5-stock/build.gradle
+++ b/dante5-stock/build.gradle
@@ -1,28 +1,22 @@
 
 dependencies {
     compile(
-            project(':project-common'),
-            project(':openapi-ice')
+            project(':openapi-ice'),
+              project(':project-common'),
+            project(':iog-common-product')
     )
     compile 'com.stanfy:gson-xml-java:0.1.+'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'kxml2:kxml2:2.3.0'
-    compile project(':dante5')
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
 jar {
-    dependsOn copyToLib , copyResources    , copyResourcesToClasses
+    dependsOn copyToLib , copyResources    , dependsClassPath
     exclude ("**/*.properties")
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
-
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.dante5.stock.GrabStockImp'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.dante5.stock.schedule.Startup'
     }
 }
 
