--- a/russoCapri/src/main/resources/conf.properties
+++ b/russoCapri/src/main/resources/conf.properties
@@ -1,3 +1,5 @@
 supplierId=2016030701799
 url=http://82.185.221.164/ws_sito/ws_sito_p15.asmx/
 day=90
+#picpath=/mnf/nfs/theclutcher/
+picpath=F://mnf//nfs//theclutcher//
