--- a/theclutcher/src/main/resources/conf.properties
+++ b/theclutcher/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
-supplierId=2015101017999
+supplierId=2015102201625
 local.filePath=E\:\\lubaijiang
 day=90
 
 uri=https://www.theclutcher.com/en-US/home/feedShangpin
-picpath=E\:\\20160314\\
+picpath=
