--- a/dellogliostore-stock/build.gradle
+++ b/dellogliostore-stock/build.gradle
@@ -2,8 +2,8 @@
 dependencies {
     compile(
             project(':project-common'),
-            project(':openapi-ice')
-            //project(':iog-sop'),
+            //project(':openapi-ice')
+            project(':iog-sop'),
     )
     //compile project(':dellogliostore')
     testCompile group: 'junit', name: 'junit', version: '4.11'
