--- a/log-template/build.gradle
+++ b/log-template/build.gradle
@@ -1,6 +1,12 @@
 
 dependencies {
 
+    compile (
+        "org.springframework:spring-aop:${springVersion}",
+		"org.aspectj:aspectjrt:1.6.12",
+		"org.aspectj:aspectjweaver:1.6.12",
+        "cglib:cglib:2.2"
+    )
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
