--- a/biancabianca/src/main/resources/conf.properties
+++ b/biancabianca/src/main/resources/conf.properties
@@ -2,4 +2,6 @@
 supplierId=2015092901551
 day=90
 path=/usr/local/app/biancabianca/TLG_partner_weitzman_NL.txt
-url=http://www.biancabianca.com/feed/TLG_partner_weitzman_NL.txt
+url=http\://www.biancabianca.com/feed/TLG_partner_weitzman_NL.txt
+
+picpath=/mnt/nfs/levelgroup/
