--- a/levelgroup-stock/build.gradle
+++ b/levelgroup-stock/build.gradle
@@ -1,12 +1,12 @@
 dependencies {
     compile(
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
-            "commons-dbcp:commons-dbcp:1.4",
+           // "org.mybatis:mybatis:3.2.2",
+           // "org.mybatis:mybatis-spring:1.2.0",
+           // "mysql:mysql-connector-java:5.1.21",
+           // "commons-dbcp:commons-dbcp:1.4",
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
-            project(':project-dao'),
+           // project(':project-dao'),
             project(':iog-common-product'),
             project(':iog-sop')
     )
@@ -15,16 +15,16 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib,copyResources, copyResourcesToClasses
+    dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
-    def manifestCp = configurations.compile.files.collect {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
+ //   def manifestCp = configurations.compile.files.collect {
+ //       File file = it
+ //       "lib/${file.name}"
+ //   }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.levelgroup.stock.LevelGroupStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ./conf/  ' + manifestCp
+ //       attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
