--- a/itemInfo/build.gradle
+++ b/itemInfo/build.gradle
@@ -5,7 +5,8 @@ dependencies {
             "org.jdom:jdom:2.0.2",
             project(':project-common'),
          
-            project(':iog-common-product')
+            project(':iog-common-product'),
+            project(':iog-product-framework')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
