--- a/itemInfo/src/main/resources/conf.properties
+++ b/itemInfo/src/main/resources/conf.properties
@@ -1,4 +1,6 @@
 supplierId=2015101001588
 day=90
+localPath=/usr/local/app/alducadaosta/testBuffer.xml
 #0时重新下载文件 1时不下载
-biaoshi=1
+biaoshi=0
+picpath=/mnt/nfs/alducadaosta/
