--- a/linoricci-stock/src/main/resources/conf.properties
+++ b/linoricci-stock/src/main/resources/conf.properties
@@ -1,4 +1,5 @@
 supplierId=2015113001685
-url=http://79.61.138.184/ws_sito/ws_sito_p15.asmx/
+#url=http://79.61.138.184/ws_sito/ws_sito_p15.asmx/
+url=http://95.110.234.45/ws_sito/ws_sito_p15.asmx
 jobsSchedule=0 55 0/1 * * ? 
 time=5400000
