--- a/linoricci/src/main/resources/conf.properties
+++ b/linoricci/src/main/resources/conf.properties
@@ -1,5 +1,6 @@
 #供应商ID
 #supplierId=2015091701503
 supplierId=2015113001685
-url=http://79.61.138.184/ws_sito/ws_sito_p15.asmx/
+#url=http://79.61.138.184/ws_sito/ws_sito_p15.asmx/
+url=http://95.110.234.45/ws_sito/ws_sito_p15.asmx
 day=90
