kix增加tags中的sale判断

--- a/KIX-order/build.gradle
+++ b/KIX-order/build.gradle
@@ -21,7 +21,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.forzieri.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.kix.Startup'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
