--- a/KIX-stock/build.gradle
+++ b/KIX-stock/build.gradle
@@ -20,7 +20,7 @@ jar {
 
     manifest {
 	
-   		 attributes 'Main-Class': 'com.shangpin.iog.Creative99.stock.StockImp'
+   		 attributes 'Main-Class': 'com.shangpin.iog.kix.stock.StockImp'
     
    
    
