--- a/Della-HK-purchase/src/main/resources/conf.properties
+++ b/Della-HK-purchase/src/main/resources/conf.properties
@@ -17,3 +17,10 @@ password=api@888
 jobsSchedule=0 0/2 * * * ? 
 startDateOfTemp=
 endDateOfTemp=
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=lubaijiang@shangpin.com,lizhongren@shangpin.com
+subject=
+messageType=text/html;charset\=utf-8
