--- a/Della-purchase/src/main/resources/conf.properties
+++ b/Della-purchase/src/main/resources/conf.properties
@@ -20,3 +20,11 @@ startDateOfTemp=
 endDateOfTemp=
 startDate=
 endDate=
+
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=lubaijiang@shangpin.com,lizhongren@shangpin.com
+subject=
+messageType=text/html;charset\=utf-8
