--- a/levelgroup-stock/src/main/resources/conf.properties
+++ b/levelgroup-stock/src/main/resources/conf.properties
@@ -2,4 +2,6 @@
 supplierId=2015092901551
 
 path=/usr/local/appstock/levelgroup/TLG_partner_weitzman_NL_STOCK.txt
+pathincc=/usr/local/appstock/levelgroup/TLG_partner_lncc2_GB.txt
 url=http://www.biancabianca.com/feed/TLG_partner_weitzman_NL.txt
+urllncc=http://www.biancabianca.com/feed/TLG_partner_lncc2_GB.txt
