--- a/levelgroup-stock/src/main/resources/sop.properties
+++ b/levelgroup-stock/src/main/resources/sop.properties
@@ -7,10 +7,13 @@ APP_KEY=85dcdaa4588e4ec59006579b370b046f
 #supplier secret
 APP_SECRET =7f5482beca184e28b86c0405113095a0
 
-url=http://www.biancabianca.com/feed/TLG_partner_weitzman_NL.txt
+#url=http://www.biancabianca.com/feed/TLG_partner_weitzman_NL.txt
 
 supplierId=2015092901551
 
-
+path=/usr/local/appstock/levelgroup/TLG_partner_weitzman_NL_STOCK.txt
+pathincc=/usr/local/appstock/levelgroup/TLG_partner_lncc2_GB.txt
+url=http://www.biancabianca.com/feed/TLG_partner_weitzman_NL.txt
+urllncc=http://www.biancabianca.com/feed/TLG_partner_lncc2_GB.txt
 
 
