--- a/Helme/src/main/resources/conf.properties
+++ b/Helme/src/main/resources/conf.properties
@@ -1,7 +1,9 @@
 #test 201602291918
 supplierId=2016041301459
 #url=https://docs.google.com/spreadsheets/d/1IuiYU1B1tZjTxwY1gjggBu-7Mcvm6ddqF6K5kg_I7gc/edit?pref=2&pli=1#gid=460730819
-url=https://docs.google.com/spreadsheets/d/1IuiYU1B1tZjTxwY1gjggBu-7Mcvm6ddqF6K5kg_I7gc/export?format=xlsx&id=1IuiYU1B1tZjTxwY1gjggBu-7Mcvm6ddqF6K5kg_I7gc
+#url=https://docs.google.com/spreadsheets/d/1IuiYU1B1tZjTxwY1gjggBu-7Mcvm6ddqF6K5kg_I7gc/export?format=xlsx&id=1IuiYU1B1tZjTxwY1gjggBu-7Mcvm6ddqF6K5kg_I7gc
+url=
+
 day=90
-path=E://helme/HELME_giacenze.xlsx
+path=E\:\\20160314\\Productlist.xlsx
 #path=E\:\\Productlist.xlsx
