--- a/Helme/build.gradle
+++ b/Helme/build.gradle
@@ -3,10 +3,12 @@
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile(
-           	
+           	'net.sourceforge.javacsv:javacsv:2.0',
             project(':iog-common-product'),
         	'org.apache.poi:poi:3.13',
       		'org.apache.poi:poi-excelant:3.13',
+      		
+      		"commons-net:commons-net:3.3"
  
     )
 }
