--- a/atelier-linde/src/main/resources/conf.properties
+++ b/atelier-linde/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
-supplierId=201605031155
+supplierId=2016050401882
 url=http://2.229.66.138/ws_sito_p15/WS_Sito_p15.asmx/
 user=Shangpin
 pass=Shang$linde01
