--- a/atelier-linde-stock/build.gradle
+++ b/atelier-linde-stock/build.gradle
@@ -21,7 +21,7 @@ jar {
 
     manifest {
 	
-   		 attributes 'Main-Class': 'com.shangpin.iog.paolo.stock.schedule.Startup'
+   		 attributes 'Main-Class': 'com.shangpin.iog.atelierlinde.stock.schedule.Startup'
    //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
