--- a/monnierfreres/build.gradle
+++ b/monnierfreres/build.gradle
@@ -6,28 +6,21 @@ dependencies {
             "commons-dbcp:commons-dbcp:1.4",
             "net.sourceforge.javacsv:javacsv:2.0",
             project(':project-common'),
-            project(':iog-common-product'),
-            project(':fashionesta-stock')
+                        project(':iog-product-framework'),
+            project(':iog-common-product')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
-
 
 }
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources,dependsClassPath
     exclude ("**/*.properties")
 
 
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
-
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.monnierfreres.StartSkuJob'
-        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
+        attributes 'Main-Class': 'com.shangpin.iog.monnierfreres.service.MonnierFrameFetchProduct'
     }
 
 }
