--- a/Helme-stock/src/main/resources/conf.properties
+++ b/Helme-stock/src/main/resources/conf.properties
@@ -2,7 +2,7 @@ supplierId=2016041301459
 jobsSchedule=0 45 0/1 * * ? 
 time=3600000
 
-localFile=E:\\
+localFile=/usr/local/appstock/helme/\
 remoteFile=stock_helme.csv
 host=backup.fenix.mc.it
 port=21
