--- a/Helme/build.gradle
+++ b/Helme/build.gradle
@@ -23,7 +23,7 @@ jar {
    // }.join(' ')
 
     manifest {
-   		 attributes 'Main-Class': 'com.shangpin.iog.notenom.StartUp'
+   		 attributes 'Main-Class': 'com.shangpin.iog.helme.StartUp'
    
    
    //     attributes 'Class-Path': '. ./conf/  ' +  manifestCp
