--- a/revolve-stock/src/main/resources/conf.properties
+++ b/revolve-stock/src/main/resources/conf.properties
@@ -3,5 +3,6 @@ supplierId=201605101521
 time=60
 day=90
 picpath=
-filepath=F:\\revolve\\asd.txt
-#filepath=/usr/local/app/revolve/products.txt
+filepath=/usr/local/appstock/revolve/products.txt
+jobsSchedule=0 0 0/1 * * ? 
+time=5400000
