--- a/bagheera-stock/src/main/resources/conf.properties
+++ b/bagheera-stock/src/main/resources/conf.properties
@@ -1,4 +1,5 @@
 path=/usr/local/appstock/bagheera/BagheeraBoutiqueLaso
+#path=F://usr//baaaa
 url=http://www.bagheeraboutique.com/en-US/home/shangpin
 supplierId=2015100701573
 jobsSchedule=0 0 0/1 * * ? 
