--- a/stefaniamode/src/main/resources/conf.properties
+++ b/stefaniamode/src/main/resources/conf.properties
@@ -5,4 +5,5 @@ supplierId=2015092401528
 url=https://www.stefaniamode.com/feeds/StefaniaMode.xml
 #推迟的天数
 day=90
-picpath=/usr/local/app/stefaniamode/picture/
+#picpath=/usr/local/app/stefaniamode/picture/
+picpath=
