--- a/bagheera-stock/build.gradle
+++ b/bagheera-stock/build.gradle
@@ -19,8 +19,8 @@ jar {
 //        "lib/${file.name}"
 //    }.join(' ')
 
-    manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.bagheera.schedule.Startup'
+	    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.bagheera.stock.schedule.Startup'
 //        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
