--- a/fashionesta/src/main/resources/param.properties
+++ b/fashionesta/src/main/resources/param.properties
@@ -1,5 +1,6 @@
-path=/usr/local/app/fashionesta/fashionesta
+#path=/usr/local/app/fashionesta/fashionesta
+path=F://fashionesta
 url=http://integration.fashionesta.eu/shangpinmasterdata.csv
-supplierId=2015092901556
+#supplierId=2015092901556
 day=90
-  #201509281616
+supplierId=201509281616
