--- a/meifeng-stock/build.gradle
+++ b/meifeng-stock/build.gradle
@@ -25,7 +25,7 @@ jar {
 //    }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.meifeng.stock.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.meifeng.stock.schedule.Startup'
 //        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
