--- a/revolve/src/main/resources/conf.properties
+++ b/revolve/src/main/resources/conf.properties
@@ -1,7 +1,7 @@
 url=http://52.79.191.130/shangping/feed/products
-supplierId=201605101521
+supplierId=2016051201891
 time=60
 day=90
 picpath=
-filepath=F:\\revolve\\asd.txt
-#filepath=/usr/local/app/revolve/products.txt
+#filepath=F:\\revolve\\asd.txt
+filepath=/usr/local/app/revolve/products.txt
