--- a/atelier-linde-order/src/main/resources/conf.properties
+++ b/atelier-linde-order/src/main/resources/conf.properties
@@ -2,10 +2,11 @@ supplierId=2016050401882
 supplierNo=
 startDateOfTemp=
 endDateOfTemp=
-#path=
-path=C://test//
+path=/usr/local/apporder/atelierLindeOrder/orders/
+#path=C://test//
 
 filePath=/usr/local/apporder/atelierLindeOrder/DatiShang.txt
+#filePath=C://AMD//Dati.shang.txt
 smtpHost=smtp.shangpin.com
 from=chengxu@shangpin.com
 fromUserPassword=shangpin001
