--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -45,4 +45,7 @@ skuwithoutsize=2015101501608
 efashion=2015111001657
 #供应商sku去掉_后面的数字+颜色
 pavin=2015093001569
-efashion=2015111001657
+
+supplierId_diffSeason=201510031117,2015092801547
+sendMaildiffSeason_Schedule=0 13 19 * * ?
+diffSeasonFilepath=E:\\gggggggg.csv
