forzieri 订单520采购异常不处理

--- a/forzieri-purchase/src/main/resources/conf.properties
+++ b/forzieri-purchase/src/main/resources/conf.properties
@@ -20,3 +20,4 @@ tokenurl=https://api.forzieri.com/v2/oauth/token
 orderurl=https://api.forzieri.com/v2/orders
 startDateOfTemp=
 endDateOfTemp=
+flag=520
