--- a/itemInfo-purchase/src/main/resources/conf.properties
+++ b/itemInfo-purchase/src/main/resources/conf.properties
@@ -16,4 +16,6 @@ toEmail=jenna.zhao@shangpin.com,
 emailPass=shangpin001
 
 deleteOrderUrl=http://service.alducadaosta.com/EcSrv/Services.asmx?op=DeleteOrder
-deleteOrderSop=http://service.alducadaosta.com/EcSrv/DeleteOrder
+deleteOrderSop=http\://service.alducadaosta.com/EcSrv/DeleteOrder
+#y/n
+if520=y
