--- a/atelier-linde-order/src/main/resources/conf.properties
+++ b/atelier-linde-order/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 supplierId=2016050401882
-supplierNo=
+supplierNo=S0000781
 startDateOfTemp=
 endDateOfTemp=
 path=/usr/local/apporder/atelierLindeOrder/orders/
