--- a/pozzilei/build.gradle
+++ b/pozzilei/build.gradle
@@ -11,7 +11,7 @@ dependencies {
             "com.google.code.gson:gson:2.3.1",
             project(':project-common'),
             project(':iog-common-product'),
-                    project(':iog-product-framework'),
+            project(':iog-product-framework'),
             project(':project-dao')
     )
 
@@ -30,7 +30,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.pozzilei.service.PozzileiFrameFetchProduct'
+        attributes 'Main-Class': 'com.shangpin.iog.pozzilei.StartSkuJob'
       attributes 'Class-Path': '. ./conf/  ' + manifestCp
     }
 }
