--- a/sarenza/build.gradle
+++ b/sarenza/build.gradle
@@ -14,22 +14,15 @@ dependencies {
             project(':iog-common-product')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
-
-
 }
 
 jar {
 
-    dependsOn copyToLib , copyResources ,copyResourcesToClasses
+    dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.sarenza.StartSkuJob'
-            attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 
 }
