--- a/inviqa-order/src/main/resources/conf.properties
+++ b/inviqa-order/src/main/resources/conf.properties
@@ -17,5 +17,6 @@ messageType=text/html;charset=utf-8
 time=60
 startDateOfTemp=
 endDateOfTemp=
-
+isPurchaseExp=no
+#isPurchaseExp=yes
 jobsSchedule=0 0/2  * * * ?
