--- a/pozzilei-order/src/main/resources/param.properties
+++ b/pozzilei-order/src/main/resources/param.properties
@@ -21,3 +21,6 @@ toReebonz=lizhongren@shangpin.com
 subject=pozzi order refund
 messageText=
 messageType=text/html;charset=utf-8
+
+isPurchaseExp=no
+#isPurchaseExp=yes
