--- a/sanremo-order/src/main/resources/param.properties
+++ b/sanremo-order/src/main/resources/param.properties
@@ -22,3 +22,6 @@ toReebonz=lizhongren@shangpin.com
 subject=spinaaker order refund
 messageText=
 messageType=text/html;charset=utf-8
+
+isPurchaseExp=no
+#isPurchaseExp=yes
