--- a/tony-purchase/src/main/resources/conf.properties
+++ b/tony-purchase/src/main/resources/conf.properties
@@ -15,3 +15,6 @@ token = d355cd8701b2ebc54d6c8811e03a3229
 #Formal environment
 startDateOfTemp=
 endDateOfTemp=
+
+isPurchaseExp=no
+#isPurchaseExp=yes
