--- a/efashion-order/src/main/resources/conf.properties
+++ b/efashion-order/src/main/resources/conf.properties
@@ -11,3 +11,6 @@ to=zhaogenchun@shangpin.com
 subject=reebonz\u8BA2\u5355\u5F02\u5E38
 messageText=
 messageType=text/html;charset=utf-8
+
+#isPurchaseExp=yes
+isPurchaseExp=no
