--- a/sanremo-order/src/main/resources/log4j.properties
+++ b/sanremo-order/src/main/resources/log4j.properties
@@ -54,7 +54,7 @@ log4j.appender.error.DatePattern=_yyyy-MM-dd'.log'
 #log4j.appender.error.MaxFileSize=1MB
 #log4j.appender.error.MaxBackupIndex=2
 log4j.appender.error.layout=org.apache.log4j.PatternLayout
-log4j.appender.error.layout.ConversionPattern=\r\n--------Start----------\r\n[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n\r\n----------End---------\r\n
+log4j.appender.error.layout.ConversionPattern=%m%n
 #自定义日志不输入到log4j.rootLogger模式
 log4j.additivity.error=false
 
