--- a/vela-order/src/main/resources/param.properties
+++ b/vela-order/src/main/resources/param.properties
@@ -20,3 +20,6 @@ toReebonz=lizhongren@shangpin.com
 subject=pozzi order refund
 messageText=
 messageType=text/html;charset=utf-8
+
+isPurchaseExp=no
+#isPurchaseExp=yes
