--- a/iog-web-container/src/main/resources/conf.properties
+++ b/iog-web-container/src/main/resources/conf.properties
@@ -46,6 +46,6 @@ efashion=2015111001657
 #供应商sku去掉_后面的数字+颜色
 pavin=2015093001569
 
-supplierId_diffSeason=201510031117,2015092801547
-sendMaildiffSeason_Schedule=0 13 19 * * ?
-diffSeasonFilepath=E:\\gggggggg.csv
+supplierId_diffSeason=2015081701439
+sendMaildiffSeason_Schedule=0 26 13 * * ?
+diffSeasonFilepath=/usr/local/tomcat7/webapps/diffSeason.csv
