--- a/Della-HK-purchase/src/main/resources/conf.properties
+++ b/Della-HK-purchase/src/main/resources/conf.properties
@@ -24,3 +24,7 @@ fromUserPassword=shangpin001
 to=lubaijiang@shangpin.com,lizhongren@shangpin.com
 subject=
 messageType=text/html;charset\=utf-8
+
+upLoadSchedule=0 0 15 * * ?
+upLoadScheduleSecond=0 0 20 * * ?
+upLoadScheduleThird=0 0 1 * * ?
