--- a/Della-purchase/src/main/resources/conf.properties
+++ b/Della-purchase/src/main/resources/conf.properties
@@ -15,7 +15,9 @@ user=apiftp
 #password=inter2015£
 password=api@888
 jobsSchedule=0 0/2 * * * ?
-upLoadSchedule=0 0 1 * * ? 
+upLoadSchedule=0 0 14 * * ? 
+upLoadScheduleSecond=0 0 19 * * ?
+upLoadScheduleThird=0 05 0 * * ? 
 startDateOfTemp=
 endDateOfTemp=
 startDate=
