--- a/levelgroup-Monobrand-purchase/build.gradle
+++ b/levelgroup-Monobrand-purchase/build.gradle
@@ -1,15 +1,13 @@
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-	
-	compile(project(':openapi-ice')) {
-		exclude module: 'iog-common-product'
-	}
-    compile(
+	compile(
+
             "com.google.code.gson:gson:2.2.2",
             project(':project-common'),
-          
-            project(':iog-common-product2')
+            project(':openapi-ice'),
+            project(':iog-common-product'),
+            project(':project-dao')            
     )
 }
 
