--- a/Della-HK-purchase/build.gradle
+++ b/Della-HK-purchase/build.gradle
@@ -22,7 +22,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.DellaHK.purchase.Upload'
+        attributes 'Main-Class': 'com.shangpin.iog.DellaHK.purchase.StartUp'
         attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
