--- a/tony-day-stock/src/main/resources/conf.properties
+++ b/tony-day-stock/src/main/resources/conf.properties
@@ -8,3 +8,10 @@ period = 30
 merchantId = 55f707f6b49dbbe14ec6354d
 #Token
 token = d355cd8701b2ebc54d6c8811e03a3229
+
+smtpHost=smtp.shangpin.com
+from=chengxu@shangpin.com
+fromUserPassword=shangpin001
+to=lizhongren@shangpin.com,lubaijiang@shangpin.com
+subject=
+messageType=text/html;charset\=utf-8
