--- a/lungolivigno/build.gradle
+++ b/lungolivigno/build.gradle
@@ -1,32 +1,22 @@
+
+
 dependencies {
-    compile(
-            "org.jsoup:jsoup:1.8.3",
-            project(':project-common'),
-            project(':iog-common-product')
-    )
     testCompile group: 'junit', name: 'junit', version: '4.11'
-
-
+    compile(
+                project(':iog-common-product'),
+        	project(':iog-product-framework'),
+        	"com.google.code.gson:gson:2.3.1",
+ 
+    )
 }
 
 jar {
 
-    dependsOn copyToLib , copyResources
+    dependsOn copyToLib , copyResources ,dependsClassPath
     exclude ("**/*.properties")
 
-
-    def manifestCp = configurations.compile.files.collect  {
-        File file = it
-        "lib/${file.name}"
-    }.join(' ')
-
     manifest {
-
-        attributes 'Main-Class': 'com.shangpin.iog.tizianafausti.Startup'
-        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
+   		 attributes 'Main-Class': 'com.shangpin.iog.lungolivigno.StartUp'
+   
     }
 }
-
-
-
-
