--- a/build.gradle
+++ b/build.gradle
@@ -113,7 +113,7 @@ subprojects {
 				,'spring-aop-4.2.5.RELEASE.jar','spring-beans-4.2.5.RELEASE.jar','spring-context-4.2.5.RELEASE.jar'
 				,'spring-core-4.2.5.RELEASE.jar','spring-data-commons-1.12.1.RELEASE.jar','spring-data-mongodb-1.9.1.RELEASE.jar','spring-expression-4.2.5.RELEASE.jar'
 				,'spring-jdbc-4.2.5.RELEASE.jar','spring-tx-4.2.5.RELEASE.jar','xmlbeans-2.6.0.jar','stax-api-1.0.1.jar'
-				,'commons-collections-3.2.1.jar','openapi-api-sdk-3.0.jar','iog-product-framework.jar','gson-2.3.1.jar']
+				,'commons-collections-3.2.1.jar','iog-product-framework.jar','gson-2.3.1.jar','openapi-api-sdk-4.5.jar']
 			def manifestCp = configurations.compile.files.collect  {
 				File file = it
 				if (publicJar.contains(file.name)) {
