--- a/tony-subFellas/src/main/resources/conf.properties
+++ b/tony-subFellas/src/main/resources/conf.properties
@@ -7,4 +7,5 @@ period = 30
 merchantId = 56e95bb7f868647d13873d98
 #Token
 token = ec1ebaa88fbcb0e5fa02ad42bdcc5be4
+baseUrl=http://www.cloudstore.srl
   #2015081401432
